# cli-notes

./: Cargo.toml  README.md  cli-notes  go.mod  go.sum  justfile  main.go
.github/workflows/: bump-version.yml  release.yml
calendar/: calendar.go
config/: config.go
note/: note.go
src/: config.rs  list.rs  main.rs  new_note.rs  note_from_template.rs  subcommand.rs  templating.rs  utils.rs
src/commands/: ls.rs  mod.rs  new_note.rs  subcommand.rs
test-config/: config.toml
test-config-ls/: config.toml
test-config-ls/notes-dir/: test-note.md
test-config/templates/: test-meta.hbs  test-template.hbs
test-data/: test-template.hbs
tests/: create_note_test.rs  ls_test.rs  subcommand_test.rs
